css/layout.css
.row {
  display: flex;
}

.wrap {
  flex-wrap: wrap;
}

.justify-center {
  justify-content: center;
}

.space-evenly {
  justify-content: space-evenly;
}

.space-around {
  justify-content: space-around;
}

.loading {
  position: absolute;
  top: 50vh;
}

.align-center {
  align-items: center;
}

.true-center {
  margin: auto 0;
}

.column-full {
  width: 100%;
}

.column-half {
  width: 50%;
}

.hidden {
  display: none;
}

.space-between {
  justify-content: space-between;
}

.modal-appear {
  background: black;
  opacity: 0.25;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.modal {
  margin: auto auto;
  background-color: white;
  border-radius: 1rem;
  width: 600px;
  height: 650px;
  top: 25%;
  right: 25%;
  bottom: 25%;
  left: 25%;
  position: fixed;
}

